# bankruptcy_prediction_app

./: .gitignore  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml  secret.toml
app/: main.py
app/utils/: constants.py
data/: bankrupt_companies.csv
tests/: test_basic.py
